--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
 }
@@ -35,4 +35,346 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.content {
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  width: 1140px;
+  min-height: 534px;
+  padding: 133px 30px;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 30px;
+}
+
+.result {
+  display: flex;
+  /* justify-content: center; */
+  /* align-items: flex-end; */
+
+  flex-direction: column;
+  /* gap: 16px; */
+  padding-top: 78px;
+}
+
+.button {
+  color: #fff;
+  background-color: transparent;
+  text-align: center;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  cursor: pointer;
+}
+
+button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  outline-offset: 2px;
+  outline: 1px solid #fff;
+}
+
+.result__video-container {
+  position: relative;
+  width: 711px;
+  height: 386px;
+
+  margin-bottom: 16px;
+  display: flex;
+}
+
+.result__video {
+  width: inherit;
+  height: inherit;
+  display: flex;
+  object-fit: fill;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 40px;
+  align-items: flex-start;
+}
+
+.search-form__textfield {
+  appearance: none;
+  color: rgba(255, 255, 255, 0.7);
+  background-color: transparent;
+  text-align: left;
+  border: none;
+
+  min-width: 225px;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.search-form__textfield:active {
+  border: 1px solid #fff;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+  outline-offset: 0;
+  border: none;
+}
+
+.search-form__submit-button {
+  margin-top: 20px;
+  border: 1px solid #fff;
+  display: flex;
+  align-self: flex-end;
+
+  padding: 6px 73.5px;
+}
+
+.search-form__submit-button:hover {
+  text-decoration-line: underline;
+}
+
+.search-form__submit-button:active {
+  border: 1px solid #fff;
+  background: #545050;
+  text-decoration-line: none;
+}
+
+.search-form__fieldset {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 5px;
+  border: none;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+  padding: 1.5px 0;
+}
+
+.search-form__fieldset-title {
+  color: #fff;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.search-form__label {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  width: fit-content;
+  cursor: pointer;
+  align-items: center;
+}
+
+.search-form__label-text {
+  color: #fff;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline-offset: 1px;
+  outline: 1px solid #fff;
+}
+
+.search-form__fieldset-title + .search-form__label {
+  padding: 2.5px 0 2.5px;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+}
+
+.search-form__fieldset-title + .search-form__label:focus {
+  border: none;
+  outline: none;
+}
+
+.search-form__fieldset-title + .search-form__label:has(:focus-visible) {
+  outline-offset: 2px;
+  outline: 1px solid #fff;
+}
+
+.search-form__fieldset-title + .search-form__label:active {
+  outline: none;
+  border: none;
+  outline: 1px solid #fff;
+}
+
+.search-form__pseudo-checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #fff;
+
+  position: relative;
+  box-sizing: content-box;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
+  content: "";
+  display: flex;
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+  position: absolute;
+}
+
+.search-form__pseudo-checkbox + .search-form__label-text:hover {
+  text-decoration-line: underline;
+}
+
+.content__details {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 26px;
+  /* width: 100%; */
+  min-width: 399px;
+  height: 100%;
+}
+
+.title {
+  font-family: Oswald;
+  font-size: 75px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 94%;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__list {
+  /* display: flex; */
+  height: 298px;
+  /* flex-direction: column; */
+  /* align-items: flex-start;
+  gap: 30px; */
+  overflow-y: scroll;
+  position: relative;
+}
+
+.content__list::-webkit-scrollbar {
+  display: none;
+}
+
+.content__list-item {
+  margin-bottom: 30px;
+}
+
+.content__list-item {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+
+  align-items: flex-start;
+}
+
+.content__video-card {
+  display: flex;
+  flex-direction: row;
+
+  padding: 2px;
+  align-items: flex-start;
+}
+
+.content__video-card-description-container {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  gap: 6px;
+  width: 100%;
+  height: 100%;
+}
+
+.content__video-card-title {
+  color: #fff;
+  font-family: Oswald;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%; /* 30px */
+  text-transform: uppercase;
+  text-align: left;
+}
+
+.content__video-card-description {
+  color: #fff;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16.2px; /* 90% */
+  text-align: left;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+  flex-shrink: 0;
+}
+
+.content__card-link {
+  text-decoration: none;
+  width: 100%;
+  display: block;
+  margin: 2px;
+}
+
+.content__card-link:hover {
+  text-decoration-line: underline;
+  text-decoration-color: #fff;
+}
+
+.content__card-link:active {
+  background: #545050;
+}
+
+.content__card-link:focus {
+  border: none;
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+}
+
+.content__card-link_current {
+  background: #545050;
+}
+
+.more-button {
+  width: 100%;
+  border: 1px solid #fff;
+  padding: 6px 0;
 }
