--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: "Fira Sans Condensed", sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif, Arial, sans-serif;
   font-size: 18px;
   background-color: #1b1919;
   display: flex;
@@ -77,17 +77,28 @@ ol {
   color: #fff;
   background-color: transparent;
   text-align: center;
-  font-family: Fira Sans Condensed;
+  font-family: Fira Sans Condensed, Arial, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
   cursor: pointer;
   box-sizing: content-box;
+  border: 1px solid #fff;
 }
 
 button:focus {
   outline: none;
+}
+
+.button:hover {
+  text-decoration-line: underline;
+}
+
+.button:active {
+  border: 1px solid #fff;
+  background: #545050;
+  text-decoration-line: none;
 }
 
 .button:focus-visible {
@@ -108,7 +119,7 @@ button:focus {
   width: inherit;
   height: inherit;
   display: flex;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 .search-form {
@@ -121,13 +132,13 @@ button:focus {
 
 .search-form__textfield {
   appearance: none;
-  color: rgba(255, 255, 255, 0.7);
+  color: #fff;
   background-color: transparent;
   text-align: left;
   border: none;
   padding: 2.5px 0 2.5px;
   min-width: 225px;
-  font-family: Fira Sans Condensed;
+  font-family: Fira Sans Condensed, Arial, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -138,22 +149,21 @@ button:focus {
   border: 1px solid #fff;
 }
 
-.search-form__textfield:focus {
+/* .search-form__textfield:has(:focus-visible) {
   outline: none;
   outline-offset: 0;
   border: none;
-}
+} */
 
 .search-form__submit-button {
   margin-top: 20px;
-  border: 1px solid #fff;
   display: flex;
   align-self: flex-end;
 
   padding: 6px 73.5px;
 }
 
-.search-form__submit-button:hover {
+/* .search-form__submit-button:hover {
   text-decoration-line: underline;
 }
 
@@ -161,7 +171,7 @@ button:focus {
   border: 1px solid #fff;
   background: #545050;
   text-decoration-line: none;
-}
+} */
 
 .search-form__fieldset {
   display: inline-flex;
@@ -179,7 +189,7 @@ button:focus {
 
 .search-form__fieldset-title {
   color: #fff;
-  font-family: Fira Sans Condensed;
+  font-family: Fira Sans Condensed, Arial, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -197,7 +207,7 @@ button:focus {
 
 .search-form__label-text {
   color: #fff;
-  font-family: Fira Sans Condensed;
+  font-family: Fira Sans Condensed, Arial, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -250,9 +260,15 @@ button:focus {
   height: 15px;
   background-color: #fff;
   position: absolute;
+  top: 0;
+  left: 0;
 }
 
-.search-form__pseudo-checkbox + .search-form__label-text:hover {
+/* .search-form__pseudo-checkbox + .search-form__label-text:hover {
+  text-decoration-line: underline;
+} */
+
+.search-form__label:hover > .search-form__label-text {
   text-decoration-line: underline;
 }
 
@@ -267,7 +283,7 @@ button:focus {
 }
 
 .title {
-  font-family: Oswald;
+  font-family: Oswald, Arial, sans-serif;
   font-size: 75px;
   font-style: normal;
   font-weight: 700;
@@ -285,24 +301,25 @@ button:focus {
   /* flex-direction: column; */
   /* align-items: flex-start;
   gap: 30px; */
-  overflow-y: scroll;
+  overflow-y: auto;
+  /* overflow-x: hidden; */
   position: relative;
 }
 
-.content__list::-webkit-scrollbar {
+/* .content__list::-webkit-scrollbar {
   display: none;
-}
-
-.content__list-item {
-  margin-bottom: 30px;
-}
+} */
 
 .content__list-item {
   display: flex;
   flex-direction: row;
   width: 100%;
-
   align-items: flex-start;
+  margin-bottom: 30px;
+}
+
+.content__list-item:nth-last-child(2) {
+  margin-bottom: 0;
 }
 
 .content__video-card {
@@ -324,29 +341,37 @@ button:focus {
 
 .content__video-card-title {
   color: #fff;
-  font-family: Oswald;
+  font-family: Oswald, Arial, sans-serif;
   font-size: 30px;
   font-style: normal;
   font-weight: 700;
   line-height: 100%; /* 30px */
   text-transform: uppercase;
   text-align: left;
+  max-width: 200px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .content__video-card-description {
   color: #fff;
-  font-family: Fira Sans Condensed;
+  font-family: Fira Sans Condensed, Arial, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 16.2px; /* 90% */
   text-align: left;
+  max-width: 200px;
+  word-wrap: break-word;
 }
 
 .content__video-card-thumbnail {
   width: 194px;
   height: 103px;
   flex-shrink: 0;
+  object-position: center;
+  object-fit: cover;
 }
 
 .content__card-link {
@@ -380,6 +405,6 @@ button:focus {
 
 .more-button {
   width: 100%;
-  border: 1px solid #fff;
+  box-sizing: border-box;
   padding: 6px 0;
 }
