--- a/styles/style.css
+++ b/styles/style.css
@@ -149,6 +149,9 @@ button:focus {
   border: 1px solid #fff;
 }
 
+.search-form__textfield:focus {
+  outline: none;
+}
 /* .search-form__textfield:has(:focus-visible) {
   outline: none;
   outline-offset: 0;
